[gd_scene load_steps=4 format=3 uid="uid://dxh0s0w5nuwyl"]

[ext_resource type="Script" uid="uid://cnsero6iaqmxo" path="res://nodes/name_input.gd" id="1_6nqgh"]
[ext_resource type="FontFile" uid="uid://bwbmw7rvg8oeq" path="res://assets/fonts/m5x7.ttf" id="2_y0fum"]
[ext_resource type="Texture2D" uid="uid://b14e5qdqprdo2" path="res://assets/char_arrows.png" id="3_w5r0w"]

[node name="NameInput" type="Node2D"]
script = ExtResource("1_6nqgh")

[node name="PlayerName" type="HBoxContainer" parent="."]
offset_right = 41.0
offset_bottom = 23.0

[node name="Char1" type="Label" parent="PlayerName"]
layout_mode = 2
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_y0fum")
theme_override_font_sizes/font_size = 44
text = "A"

[node name="Char2" type="Label" parent="PlayerName"]
layout_mode = 2
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_y0fum")
theme_override_font_sizes/font_size = 44
text = "A"

[node name="Char3" type="Label" parent="PlayerName"]
layout_mode = 2
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_y0fum")
theme_override_font_sizes/font_size = 44
text = "A"

[node name="Arrows" type="Sprite2D" parent="PlayerName"]
position = Vector2(7, 21)
texture = ExtResource("3_w5r0w")
